## Head:

* Updated to composer 0.0.6
* Switching to compose gem for setup
* Added IAM role for reading metadata to CF template
* Switch cookbooks/ohai/files/default/plugins/cfn.rb to read creds from EC2 role
* Initial commit